<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.mybatis</groupId>
    <artifactId>mybatis-parent</artifactId>
    <version>40</version>
    <relativePath/>
  </parent>

  <groupId>org.mybatis.spring.boot</groupId>
  <artifactId>mybatis-n-spring-boot</artifactId>
  <version>3.0.3.4-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>mybatis-spring-boot</name>
  <description>Spring Boot Support for MyBatis</description>
  <url>https://www.mybatis.org/spring-boot-starter/</url>
  <inceptionYear>2015</inceptionYear>

  <modules>
    <module>mybatis-spring-boot-autoconfigure</module>
    <module>mybatis-spring-boot-starter</module>
  </modules>

  <distributionManagement>
  </distributionManagement>

  <properties>
    <!-- Maven compiler options -->
    <java.version>21</java.version>
    <java.release.version>21</java.release.version>
    <maven.min-version>3.9.2</maven.min-version>
    <mybatis.version>3.5.15.4-SNAPSHOT</mybatis.version>
    <mybatis-spring.version>3.0.4.4-SNAPSHOT</mybatis-spring.version>
    <mybatis-freemarker.version>1.2.4</mybatis-freemarker.version>
    <mybatis-velocity.version>2.1.2</mybatis-velocity.version>
    <mybatis-thymeleaf.version>1.0.4</mybatis-thymeleaf.version>
    <spring-boot.version>3.1.5</spring-boot.version>

    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED -Dfile.encoding=UTF-8</argLine>

    <!-- Reproducible Builds -->
    <project.build.outputTimestamp>1684572441</project.build.outputTimestamp>

    <module.name>org.mybatis.spring.boot</module.name>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.mybatis</groupId>
        <artifactId>mybatis-n</artifactId>
        <version>${mybatis.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mybatis</groupId>
        <artifactId>mybatis-n-spring</artifactId>
        <version>${mybatis-spring.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mybatis.scripting</groupId>
        <artifactId>mybatis-freemarker</artifactId>
        <version>${mybatis-freemarker.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mybatis.scripting</groupId>
        <artifactId>mybatis-velocity</artifactId>
        <version>${mybatis-velocity.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mybatis.scripting</groupId>
        <artifactId>mybatis-thymeleaf</artifactId>
        <version>${mybatis-thymeleaf.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mybatis.spring.boot</groupId>
        <artifactId>mybatis-n-spring-boot-autoconfigure</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mybatis.spring.boot</groupId>
        <artifactId>mybatis-n-spring-boot-starter</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <version>${spring-boot.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <id>sonatype-oss-snapshots</id>
      <name>Sonatype OSS Snapshots Repository</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </repository>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>spring-milestone</id>
      <name>Spring Milestone</name>
      <url>https://repo.spring.io/milestone</url>
    </repository>
    <repository>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>spring-snapshot</id>
      <name>Spring Snapshot</name>
      <url>https://repo.spring.io/snapshot</url>
    </repository>
  </repositories>
  <pluginRepositories>
    <pluginRepository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>spring-milestone</id>
      <name>Spring Milestone</name>
      <url>https://repo.spring.io/milestone</url>
    </pluginRepository>
    <pluginRepository>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>spring-snapshot</id>
      <name>Spring Snapshot</name>
      <url>https://repo.spring.io/snapshot</url>
    </pluginRepository>
  </pluginRepositories>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <executions>
            <!-- prepare site content by filtering ${project.*} values-->
            <execution>
              <id>filter-site</id>
              <goals>
                <goal>copy-resources</goal>
              </goals>
              <phase>pre-site</phase>
              <configuration>
                <outputDirectory>${project.build.directory}/site-src</outputDirectory>
                <resources>
                  <resource>
                    <directory>src/site</directory>
                    <filtering>true</filtering>
                  </resource>
                </resources>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <configuration>
            <locales>en,zh_CN</locales>
            <siteDirectory>${project.build.directory}/site-src</siteDirectory>
          </configuration>
        </plugin>
        <!-- We are not modular yet but use automatic module names, javadoc plugin has well known incorrect determination of modular, patch it -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <configuration>
            <additionalOptions combine.children="append">
              <option>--add-modules</option>
              <option>java.desktop</option>
              <option>--add-modules</option>
              <option>java.sql</option>
            </additionalOptions>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.gaul</groupId>
        <artifactId>modernizer-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>modernizer</id>
            <phase>none</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
